k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  number: 8000

          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todos-api
                port:
                  number: 8082

          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-api
                port:
                  number: 8083

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-app
                port:
                  number: 8080
